# Optimization-Purkinje-Network

./: LICENSE  README.md
benjamim-liu-scripts/: extract_purkinje_and_pmjs.m  extract_ventricles.m
bernardo-pos-processing/: script_to_extract_pmjs.py  script_to_extract_purkinje.py
bernardo-pos-processing/parser-pts-to-geo/: CMakeLists.txt  main.cpp
bernardo-pos-processing/skeleton-3d/: eliminateThresh.m  skeletonization.m  write_to_pts.py
lucas-scripts/ErrorCalculator/: .gitignore  Makefile  MeanStd.cpp  calcInfoFolder.sh  tiraVirgula
lucas-scripts/ErrorCalculator/include/: error.h
lucas-scripts/ErrorCalculator/src/: error.cpp  main.cpp
lucas-scripts/Lsystem-Miocardium/: Makefile  README  executa
lucas-scripts/Lsystem-Miocardium/include/: error.h  macroscopic.h  miocardium.h  mitchell.h  plot.h  purkinje.h  queue.h
lucas-scripts/Lsystem-Miocardium/src/: error.cpp  macroscopic.cpp  main.cpp  miocardium.cpp  mitchell.cpp  plot.cpp  purkinje.cpp  queue.cpp
lucas-scripts/Point-To-Sphere-v3/: CMakeLists.txt  PointToSphere.cxx
lucas-scripts/Point-To-VTK/: Makefile
lucas-scripts/Python_Converter/: converter.py
lucas-scripts/Segment_Counter/: Makefile
lucas-scripts/Statistic-Calculator/: Makefile
lucas-scripts/T-Test/: ttest.py
lucas-scripts/Tree-Reader-v3/: .gitignore  Makefile  MeanStd.cpp  calcInfoFolder.sh
lucas-scripts/VTP_To_VTK_v2.0/: CMakeLists.txt  ConvertFile.cxx
lucas-scripts/VertexRemover/: Makefile  in  saida.vtk  saidaORIGINAL.vtk
lucas-scripts/angle-2-Vectors/: main.cpp
paraview/: cco_paraview_transform_filter_config.txt
(+17 files in other folders)
